--- a/index.html
+++ b/index.html
@@ -12,29 +12,19 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
 	<!-- Stylesheets -->
-	<link rel="stylesheet" href="css/bootstrap.css" />
-	<link rel="stylesheet" href="css/styles.css" />
+	<link rel="stylesheet" href="./css/bootstrap.css" />
+	<link rel="stylesheet" href="./css/styles.css" />
 
 	<!--[if lt IE 9]>
 		<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
 	<![endif]-->
 
 	<!-- Favicon and Apple Touch Icons -->
-	<link rel="shortcut icon" href="images/icons/favicon.ico">
-	<link rel="apple-touch-icon" href="images/icons/apple-touch-icon.png">
-	<link rel="apple-touch-icon" sizes="72x72" href="images/icons/apple-touch-icon-72x72.png">
-	<link rel="apple-touch-icon" sizes="114x114" href="images/icons/apple-touch-icon-114x114.png">
+	<link rel="shortcut icon" href="./images/icons/favicon.ico">
+	<link rel="apple-touch-icon" href="./images/icons/apple-touch-icon.png">
+	<link rel="apple-touch-icon" sizes="72x72" href="./images/icons/apple-touch-icon-72x72.png">
+	<link rel="apple-touch-icon" sizes="114x114" href="./images/icons/apple-touch-icon-114x114.png">
     
-<script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-  ga('create', 'UA-36077659-5', 'mailofferto.com');
-  ga('send', 'pageview');
-
-</script>
 </head>
 <body>
 
