--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 
-<html lang="en">
+<html>
 <head>
 	<meta charset="utf-8">
 	<title>Mailofferto.com - De email dienst die voor u werkt</title>
-    <meta name="keywords" content="email reclame, mails verzenden, nieuwsbrief, reclame, klanten, mailing, offertes, aanvragen, prijsofferte, aanbieding, koopjes">
+        <meta name="keywords" content="email reclame, mails verzenden, nieuwsbrief, reclame, klanten, mailing, offertes, aanvragen, prijsofferte, aanbieding, koopjes">
 	<meta name="description" content="Verzend email reclame naar potentiele klanten">
 	<meta name="author" content="mailofferto.com">
 
@@ -12,8 +12,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
 	<!-- Stylesheets -->
-	<link rel="stylesheet" href="/css/bootstrap.css" />
-	<link rel="stylesheet" href="/css/styles.css" />
+	<link rel="stylesheet" href="https://kizmetco.github.io/offerto/css/bootstrap.css" />
+	<link rel="stylesheet" href="https://kizmetco.github.io/offerto/css/styles.css" />
 
 	<!--[if lt IE 9]>
 		<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
