--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 	
 		<!-- PRICING -->
 	<section class="container">
-	<a name="bestelnu"></a> 
+	<a name="hallo"></a> 
 		<h2 id="section-pricing" class="spy-hook">Wat kost het?</h2>
 		
 		<div class="row">
