--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 					
 					<ul class="header-benefits">
                     	<li><i class="icon-ok"></i> U wil reclame maken voor uw website/produkt/dienst?</li>
-			<li><i class="icon-ok"></i> Bij ons hoeft u enkel tekst en foto's aan te leveren</li>						
+						<li><i class="icon-ok"></i> Bij ons hoeft u enkel tekst en foto's aan te leveren</li>						
                         <li><i class="icon-ok"></i> Het volledige ontwerp en de verzending is in onze handen</li>
                         <li><i class="icon-ok"></i> Belgische en Nederlandse email-adressen</li>
                         <li><i class="icon-ok"></i> Uw emailcampagne verzendklaar binnen 48 uur</li>
@@ -129,7 +129,7 @@
 	
 		<!-- PRICING -->
 	<section class="container">
-	<a name="hallo"></a> 
+	<a name="bestenu"></a> 
 		<h2 id="section-pricing" class="spy-hook">Wat kost het?</h2>
 		
 		<div class="row">
