--- a/index.html
+++ b/index.html
@@ -256,13 +256,7 @@ BESTEL
 			  </ul>
 				<div class="cta-area">
 
-<form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
-<input type="hidden" name="page_style" value="mailofferto">
-<input type="hidden" name="cmd" value="_s-xclick">
-<input type="hidden" name="hosted_button_id" value="QNHUGHXXMN5M6">
-<input type="image" src="https://mailofferto.com/images/bestelbutton.png" border="0" name="submit" alt="PayPal, de veilige en complete manier van online betalen.">
-<img alt="" border="0" src="https://www.paypalobjects.com/en_GB/i/scr/pixel.gif" width="1" height="1">
-</form>
+BESTEL
 
 
                 </div>
