--- a/index.html
+++ b/index.html
@@ -613,33 +613,8 @@ BESTEL
                 <br />
                 145-157 St John Street
                 <br />
-				EC1V 4PY London, GB</p>				
-				<ul class="social-links clearfix">
-					<!-- AddThis Button BEGIN -->
-<div class="addthis_toolbox addthis_default_style addthis_32x32_style">
-<a class="addthis_button_facebook"></a>
-<a class="addthis_button_twitter"></a>
-<a class="addthis_button_linkedin"></a>
-<a class="addthis_button_email"></a>
-<a class="addthis_button_compact"></a>
-</div>
-<script type="text/javascript">var addthis_config = {"data_track_addressbar":true};</script>
-<script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-50883afd23832eed"></script>
-<!-- AddThis Button END -->
-                    </ul>
-                    <br />
-                    <!-- SmartAddon BEGIN -->
-<script type="text/javascript">
-(function() {
-var s=document.createElement('script');s.type='text/javascript';s.async = true;
-s.src='http://s1'+'.smartaddon.com/share_addon.js';
-var j =document.getElementsByTagName('script')[0];j.parentNode.insertBefore(s,j);
-})();
-</script>
-
-<a href="http://www.smartaddon.com/?share" title="Share" onclick="return sa_tellafriend('www.mailofferto.com')"><img alt="Share" src="http://s1.smartaddon.com/s9.png" border="0" /></a>
-<!-- SmartAddon END -->
-				
+				EC1V 4PY London, UK</p>			
+                
 			
 			</div> <!-- end span4 -->
 			
