--- a/privacy.html
+++ b/privacy.html
@@ -192,7 +192,7 @@
 	<!-- COPYRIGHT -->
 	<div class="copyright-container">
 	
-		<p>&copy; 2013 Mailofferto.com Marketing & Communication Services. Alle rechten voorbehouden.</p>
+		<p>&copy; Sinds 2012 - Mailofferto.com Marketing & Communication Services. Alle rechten voorbehouden.</p>
 		<p class="link-go-top"><a href="#top">Naar boven</a></p>
 	
 	</div> <!-- end footer-container -->
@@ -204,14 +204,19 @@
 	<script src="js/functions.js"></script>
 
 
-<!--Start of Zopim Live Chat Script-->
+<!--Start of Tawk.to Script-->
 <script type="text/javascript">
-window.$zopim||(function(d,s){var z=$zopim=function(c){z._.push(c)},$=z.s=
-d.createElement(s),e=d.getElementsByTagName(s)[0];z.set=function(o){z.set.
-_.push(o)};z._=[];z.set._=[];$.async=!0;$.setAttribute('charset','utf-8');
-$.src='//cdn.zopim.com/?1FMlGn82hzuo0upmAQwCBITqUtETBwPb';z.t=+new Date;$.
-type='text/javascript';e.parentNode.insertBefore($,e)})(document,'script');
+var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+(function(){
+var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+s1.async=true;
+s1.src='https://embed.tawk.to/59cd1b85c28eca75e4622ef2/default';
+s1.charset='UTF-8';
+s1.setAttribute('crossorigin','*');
+s0.parentNode.insertBefore(s1,s0);
+})();
 </script>
-<!--End of Zopim Live Chat Script-->
+<!--End of Tawk.to Script-->
+	
 </body>
 </html>
