--- a/terms.html
+++ b/terms.html
@@ -226,7 +226,7 @@
 	<!-- COPYRIGHT -->
 	<div class="copyright-container">
 	
-		<p>&copy; 2013 Mailofferto.com Marketing & Communication Services. Alle rechten voorbehouden.</p>
+		<p>&copy; Sinds 2012 - Mailofferto.com Marketing & Communication Services. Alle rechten voorbehouden.</p>
 		<p class="link-go-top"><a href="#top">Naar boven</a></p>
 	
 	</div> <!-- end footer-container -->
